--- a/html/ex1.html
+++ b/html/ex1.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Asher's Example 1</title>
+      <title>Baron's Example 1</title>
    </head>
    <body>
       <h1><a href="../index.html">Link to Start Page</a></h1>
