--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Baron's HW 4</title>
+      <title>Baron's HW 5</title>
    </head>
    <body>
-      <h1>Baron's Tutorial 4 Exercises</h1>
+      <h1>Baron's HW 5 Questions</h1>
       Click on an example below: <br>
       <a href="html/ex1.html">Example 1</a> <br>
       <a href="html/ex2.html">Example 2</a> <br>
