--- a/html/ex1.html
+++ b/html/ex1.html
@@ -3,11 +3,22 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Baron's Example 1</title>
+      <title>Liu's Question 1</title>
    </head>
+   <h1>A few of the Game of Thrones characters</h1>
+   <form>
+     <label for="house">House</label>:
+     <select name="house" id="house">
+       <option value="" selected>Select a house</option>
+     </select>
+   </form>
+   
+   <p>
+     <ul id="characters"></ul>
+   </p>
    <body>
       <h1><a href="../index.html">Link to Start Page</a></h1>
-      <h2>Baron's Example 1</h2>
+      <h2>Liu's Question 1</h2>
       <h3>View console to see JavaScript Output</h3>
       <script src="../js/ex1.js"></script>
    </body>
