--- a/html/ex2.html
+++ b/html/ex2.html
@@ -3,12 +3,18 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Baron's Example 2</title>
+      <title>Liu's Question  2</title>
    </head>
+      
    <body>
       <h1><a href="../index.html">Link to Start Page</a></h1>
-      <h2>Baron's Example 2</h2>
+      <h2>Liu's Question 2</h2>
       <h3>View console to see JavaScript Output</h3>
       <script src="../js/ex2.js"></script>
+      
    </body>
+   <label for="country">Enter a country name</label>:
+   <input type="text" id="country">
+   <div id="suggestions"></div>
+   
 </html>
