--- a/html/ex1.html
+++ b/html/ex1.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <link rel="stylesheet" href="../css/styles.css">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Liu's Question 1</title>
    </head>
-   <h1>A few of the Game of Thrones characters</h1>
-   <form>
-     <label for="house">House</label>:
-     <select name="house" id="house" onchange="myFunction()">
-       <option value="" selected>Select a house</option>
-     </select>
-   </form>
+   <h2>Some famous paintings</h2>
+   <table id="painting">
+       <tr>
+           <th>Name</th>
+           <th>Year</th>
+           <th>Artist</th>
+       </tr>
+   </table>
    
-   <p>
-     <ul id="characters"></ul>
-   </p>
-   
-   <p>
-     <ul id="characters"></ul>
-   </p>
    <body>
       <h1><a href="../index.html">Link to Start Page</a></h1>
       <h2>Liu's Question 1</h2>
