--- a/html/ex2.html
+++ b/html/ex2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+      <link rel="stylesheet" href="../css/styles.css">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Liu's Question  2</title>
@@ -13,8 +14,5 @@
       <script src="../js/ex2.js"></script>
       
    </body>
-   <label for="country">Enter a country name</label>:
-   <input type="text" id="country">
-   <div id="suggestions"></div>
    
 </html>
