--- a/html/ex2.html
+++ b/html/ex2.html
@@ -4,15 +4,13 @@
       <link rel="stylesheet" href="../css/styles.css">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Liu's Question  2</title>
+      <title>Liu's Question  4</title>
    </head>
       
    <body>
       <h1><a href="../index.html">Link to Start Page</a></h1>
-      <h2>Liu's Question 2</h2>
+      <h2>Liu's Question 4</h2>
       <h3>View console to see JavaScript Output</h3>
-      <script src="../js/ex2.js"></script>
-      
    </body>
-   
+   <script src="ex2.js"></script>
 </html>
