--- a/html/ex2.html
+++ b/html/ex2.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <link rel="stylesheet" href="../css/styles.css">
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Liu's Question  4</title>
-   </head>
-      
-   <body>
-      <h1><a href="../index.html">Link to Start Page</a></h1>
-      <h2>Liu's Question 4</h2>
-      <h3>View console to see JavaScript Output</h3>
-   </body>
-   <script src="ex2.js"></script>
+
+  <head>
+    <link rel="stylesheet" href="../css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liu's Question 2</title>
+  </head>
+
+  <body>
+    <h1><a href="../index.html">Link to Start Page</a></h1>
+    <h2>Liu's Question 2</h2>
+    <h3>View console to see JavaScript Output</h3>
+  </body>
+
+
+<h1><b>Information about a GitHub user</b></h1>
+    <form>
+      <p>
+        <input type="text" name="username" id="username" required>
+        <input type="submit" value="Lookup">
+      </p>
+    </form>
+    <p id="result"></p>
+
+
+    <script src="ex2.js"></script>
+
 </html>
