--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Baron's HW 7</title>
+      <title>Baron's HW 8</title>
    </head>
    <body>
-      <h1>Baron's HW 7 Questions</h1>
+      <h1>Baron's HW 8 Questions</h1>
       Click on an example below: <br>
-      <a href="html/ex1.html">Example 1</a> <br>
-      <a href="html/ex2.html">Example 2</a> <br>
+      <a href="html/ex1.html">Question 1</a> <br>
+      <a href="html/ex2.html">Question 2</a> <br>
+      <a href="html/ex2.html">Question 4</a> <br>
    </body>
 </html>
